--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ table {
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 th {
@@ -22,10 +24,6 @@ th {
 td {
     padding: 10px;
     text-align: left;
-}
-
-tr:nth-child(even) {
-    background-color: #fff;
 }
 
 #csvInput { 
